# lunar-calendar-service

./: AGENTS.md  CLAUDE.md  Procfile  README.md  cli.py  pyproject.toml  railway.json  server.py
.github/workflows/: ci.yml
data/: holidays_2025.json
docs/: PRD.md  phase-1.review.v1.md  phase0.review.v1.md  phase1.fix.review.v1.md  phase1.impl.review.v1.md  phase1.plan.review.v1.md  phase2.impl.review.v1.md  phase3.fix.review.v1.md  phase3.impl.review.v1.md
models/: __init__.py  date_info.py
services/: date_service.py
spike/: advanced_spike.py  almanac_spike.py  lunar_spike_report.md  lunar_test.py  solar_terms_spike.py
tests/: test_date_service.py  test_placeholder.py
