[project]
name = "lunar-calendar-service"
version = "0.1.0"
description = "万年历 API 服务 —— 提供阴历/阳历转换、节气、节假日、黄历宜忌等数据查询能力"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.3.1",
    "lunar-python>=1.4.8",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["models"]
